<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Selamat Datang di Layanan App Mobile"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:textAllCaps="true"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RS ATMA JAYA"
                    android:textAlignment="center"
                    style="@style/TextAppearance.MaterialComponents.Headline4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/deskripsiApp"
                    android:textAlignment="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="10sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_rawatJalan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <!-- Media -->

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_accessibility_new_24" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <!-- Title, secondary and supporting text -->
                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/daftarRawatJalan" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:text="@string/nomorAntrian"
                                android:textColor="?android:attr/textColorSecondary" />


                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_rawatInap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <!-- Media -->

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_airline_seat_individual_suite_24" />

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <!-- Title, secondary and supporting text -->
                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/daftarRawatInap" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:text="@string/rawatInap"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_laboratorium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <!-- Media -->

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_ballot_24" />

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <!-- Title, secondary and supporting text -->
                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/daftarLaboratorium" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:text="@string/checkUp"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>